--- a/w1/pong/index.html
+++ b/w1/pong/index.html
@@ -10,6 +10,7 @@
 <body>
     <canvas id="pong" width="1000" height="1000"></canvas>
     <script src="js/Box.js"></script>
+    <script src="js/Player.js"></script>
     <script src="js/keyboard.js"></script>
     <script src="js/pong.js"></script>
 </body>
