--- a/w1/pong/index.html
+++ b/w1/pong/index.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="pong.css">
 </head>
 <body>
-    <canvas id="pong" width="1000" height="1000"></canvas>
+    <section id="score"><div></div><div></div></section>
+    <canvas id="pong" width="850" height="850"></canvas>
     <script src="js/Box.js"></script>
     <script src="js/Player.js"></script>
     <script src="js/keyboard.js"></script>
