--- a/w1/pong/index.html
+++ b/w1/pong/index.html
@@ -6,10 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PONG</title>
     <link rel="stylesheet" href="pong.css">
+    
 </head>
 <body>
-    <section id="score"><div></div><div></div></section>
-    <canvas id="pong" width="850" height="850"></canvas>
+    <div>
+        <section id="score"><div></div>&nbsp;|&nbsp;<div></div></section>
+        <canvas id="pong" width="850" height="850"></canvas>
+    </div>
     <script src="js/Box.js"></script>
     <script src="js/Player.js"></script>
     <script src="js/keyboard.js"></script>
