--- a/W3/index3.html
+++ b/W3/index3.html
@@ -19,7 +19,7 @@
 
         changeWord("What's up", function(a) { alert(a); });
             
-        
+        //A callback function is a function that is passed as an argument to another function and is executed after some operation has been completed. 
     </script>
 </body>
 </html>
