--- a/W3/demos/index4.html
+++ b/W3/demos/index4.html
@@ -76,6 +76,12 @@
             document.querySelector(tag).style.backgroundColor = `rgb(${slider[0].value}, ${slider[1].value}, ${slider[2].value})`
             //tag is the parameter that we pass in, so we can change the color of anything we want like body, h1, div etc.
         }
+
+        function add(obj={a:10,b:10}) {
+           
+           return obj.a + obj.b;
+        }
+        alert(add({b:5, a:5}));//order does not matter
         
     </script>
 </body>
