--- a/W3/demos/index4.html
+++ b/W3/demos/index4.html
@@ -82,6 +82,7 @@
            return obj.a + obj.b;
         }
         alert(add({b:5, a:5}));//order does not matter
+        //or you can do it something like this way
         /*
         function add(obj) {
            let bob = {a:1, b:2};
