--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
                 </li><!--/ end of Week #1-5-->
 
                
-                <li>Week 6
+                <li>Week 3
                     <ul>
                         <li>
-                        <a href = "w6/W6Lab.html">VS Code Editor</a>
+                        <a href = "W3/se251pong_w3_start_files/index.html">W3 ASSIGNMENT - PONG 2</a>
                         </li>
                     </ul>
 
