--- a/W3/se251pong_w3_start_files/index.html
+++ b/W3/se251pong_w3_start_files/index.html
@@ -41,6 +41,14 @@
                     <label>DOWN</label><input class="d" type="text" maxlength="1"><div class="output"></div>
                     <label>STRAIGHT</label><input class="s" type="text" maxlength="1"><div class="output"></div>
                 </div>
+                <br>
+                <br>
+                <br>
+                <!--A slider to change the color of ball-->
+                <p style="font-size: large;">Change the color of the ball:</p>
+                <input type="range" min="0" max="255"><input type="number">
+                <input type="range" min="0" max="255"><input type="number">
+                <input type="range" name="ballcolor" min="0" max="255"><input type="number">
             </div>
         </section>
     </main>
