--- a/W3/se251pong_w3_start_files/index.html
+++ b/W3/se251pong_w3_start_files/index.html
@@ -48,7 +48,7 @@
                 <p style="font-size: large;">Change the color of the ball:</p>
                 <input type="range" min="0" max="255"><input type="number">
                 <input type="range" min="0" max="255"><input type="number">
-                <input type="range" name="ballcolor" min="0" max="255"><input type="number">
+                <input type="range" min="0" max="255"><input type="number">
             </div>
         </section>
     </main>
