--- a/W3/se251pong_w3_start_files/index.html
+++ b/W3/se251pong_w3_start_files/index.html
@@ -46,9 +46,11 @@
                 <br>
                 <!--A slider to change the color of ball-->
                 <p style="font-size: large;">Change the color of the ball:</p>
-                <input type="range" min="0" max="255"><input type="number">
-                <input type="range" min="0" max="255"><input type="number">
-                <input type="range" min="0" max="255"><input type="number">
+                <div class="ball-color">
+                    <input type="range" min="0" max="255"><input type="number">
+                    <input type="range" min="0" max="255"><input type="number">
+                    <input type="range" min="0" max="255"><input type="number">
+                </div>
             </div>
         </section>
     </main>
