--- a/w4/menus/index.html
+++ b/w4/menus/index.html
@@ -43,6 +43,9 @@
         startButton.appendChild(document.createTextNode(`start`));
         startMenu.appendChild(startButton)
 
+        const startOptions = document.createElement(`div`);
+        startOptions.setAttribute(`id`, `start-options`);
+
         const highScores = document.createElement(`div`);
         highScores.setAttribute(`id`, `high-scores`);
 
