First part done

--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
 
                 </li><!----end of week 6-->
 
-                <li>Week 7
+                <li>Week 4
                     <ul>
                         <li>
-                        <a href = "w7/stats/W7Lab.html">W7 Lab</a>
+                        <a href = "w4/menus/lobby.html">W4 ASSIGNMENT - PONG 4</a>
                         </li>
                     </ul>
 
