--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <li>Week 4
                     <ul>
                         <li>
-                        <a href = "w4/menus/lobby.html">W4 ASSIGNMENT - PONG 4</a>
+                        <a href = "w4/menus/index.html">W4 ASSIGNMENT - PONG 4</a>
                         </li>
                     </ul>
 
