--- a/w4/menus/index.html
+++ b/w4/menus/index.html
@@ -45,6 +45,7 @@
 
         const startOptions = document.createElement(`div`);
         startOptions.setAttribute(`id`, `start-options`);
+        //startOptions.style.opacity = `0`;
         startOptions.style.display = 'block';
         startOptions.style.width = `105px`;
         startOptions.style.height = `130px`;
