--- a/index.html
+++ b/index.html
@@ -53,6 +53,14 @@
                     </ul>
 
                 </li>
+                <li>Week 6
+                    <ul>
+                        <li>
+                        <a href = "w6/Simple Form Validation/Simple Form Validation/week2lab.html">W6 ASSGNMENT - Form Validation</a>
+                        </li>
+                    </ul>
+
+                </li>
                 
                 <li>Week 10
                     <ul>
